--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -46,7 +46,6 @@ ul{
 	margin-left: 0px;
 	margin-right: 0px;
 	display: inline-block;
-
 }
 
 li{
@@ -58,6 +57,7 @@ li{
     transition-property: transform;
     cursor: pointer;
     list-style: disc;
+    display: block;
 }
 
 li:hover,
