--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -58,7 +58,7 @@ li{
     transition-property: transform;
     cursor: pointer;
     display: block;
-    padding: 0px 10px 10px 0;
+    padding: 0px 10px 10px 0px;
 }
 
 li:hover,
