--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -42,7 +42,7 @@ ul {
 	display: inline-block;
 	/*list-style-position: inside;*/
 	margin-top: 10px;
-	padding-left: 0px;
+	padding: 0px;
 }
 li {
 	text-align: left ;
