--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -40,9 +40,8 @@ input {
 }
 ul {
 	display: inline-block;
-	list-style-position: inside;
+	/*list-style-position: inside;*/
 	margin-top: 10px;
-	padding: 0px;
 }
 li {
 	text-align: left ;
