--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -52,6 +52,20 @@ form input {
 	cursor: pointer;
 	padding-bottom: 10px;
 }
+
+
+#test-div{
+	background: #f38363;
+	border-style: solid;
+	border-radius: 5px;
+	border: 2px black;
+	display: inline-block;
+}
+#test-div:hover, test-div:focus, test-div:active{
+	background: #f4cb84;
+}
+
+
 li:hover, li:focus, li:active {
 	transform: scale(1.1);
 }
