--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -10,6 +10,9 @@ html {
 	background-color: #f4cb84;
 	text-align: center;
 }
+#container i{
+  vertical-align: middle;
+}
 img {
 	width: 200px;
 	height: 200px;
