--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -109,19 +109,23 @@ a {
 	text-align: center;
 	background: #f38363;
 	flex-grow: 0.3;
+  margin-bottom: 0 auto;
+	margin-top: 0 auto;
+  display: flex; /*allows centering*/
+	justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
 	}
 #test-div #rating i{
 	font-size: 18px;
 	color: 	#FFD700;
-	     text-shadow: 0 0 3px #000;
- position: relative;
+	text-shadow: 0 0 3px #000;
 }
 #test-div #rating #rating-score{
 	font-size: 26px;
 }
 #test-div #rating #rating-max{
-	font-size: 22px;
-	color: grey;
+	font-size: 18px;
+	color: #696969;
 }
 
 #test-div:hover, test-div:focus, test-div:active{
