done with mobile, now can js

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -10,8 +10,8 @@ html {
 	background-color: #f4cb84;
 	text-align: center;
 }
-#container i{
-  vertical-align: middle;
+#container i {
+	vertical-align: middle;
 }
 img {
 	width: 200px;
@@ -63,94 +63,85 @@ a {
 	color: inherit;
 	outline: none;
 }
-
-
-#movie-container{
-
-		box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+#movie-container {
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 	transition-duration: 0.3s;
 	transition-property: transform;
-	
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-		margin: 0 auto;
+	margin: 0 auto;
 	width: 35%;
+	height: 20%;
 	background: #e7d2cc;
 	border-radius: 5px;
 	border: 1px solid grey;
 	margin-top: 20px;
-	height: 155px;
 	position: relative;
 	text-align: left;
 }
-#movie-container img{
+#movie-container img {
 	width: 105px;
 	height: 100%;
 	padding: 10px 0px 10px 10px;
 	box-sizing: border-box;
 }
-#movie-container #text{
-		flex-grow: 1;
+#movie-container #text {
+	flex-grow: 1;
 	margin: 10px 0 0 15px;
 	box-sizing: border-box;
-
 }
-#movie-container #title-year{
+#movie-container #title-year {
 	font-size: 32px;
 	vertical-align: top;
 }
-#movie-container #cast{
+#movie-container #cast {
 	display: inline-block;
 	margin-top: 10px;
-
 }
-#movie-container #rating{
+#movie-container #rating {
 	text-align: center;
 	background: #f38363;
 	flex-grow: 0.3;
-  margin-bottom: 0 auto;
+	margin-bottom: 0 auto;
 	margin-top: 0 auto;
-  display: flex; /*allows centering*/
-	justify-content: center; /* align horizontal */
-  align-items: center; /* align vertical */
-	}
-#movie-container #rating i{
+	display: flex;
+	/*allows centering*/
+	justify-content: center;
+	/* align horizontal */
+	align-items: center;
+	/* align vertical */
+}
+#movie-container #rating i {
 	font-size: 18px;
-	color: 	#FFD700;
+	color: #FFD700;
 	text-shadow: 0 0 3px #000;
 }
-#movie-container #rating #rating-score{
+#movie-container #rating #rating-score {
 	font-size: 26px;
 }
-#movie-container #rating #rating-max{
+#movie-container #rating #rating-max {
 	font-size: 18px;
 	color: #696969;
 }
-
-#movie-container:hover, movie-container:focus, movie-container:active{
-		transform: scale(1.03);
+#movie-container:hover, movie-container:focus, movie-container:active {
+	transform: scale(1.03);
 }
-
-
-
-
 @media screen and (max-width: 1300px) {
 	img {
 		width: 100px;
 		height: 100px;
 	}
-	#movie-container{
-		height: 110px;
-		width: 90%;
+	#movie-container {
+		width: 95%;
 	}
-	#movie-container img{
-	   width: 12%;
+	#movie-container img {
+		width: 15%;
 	}
-	#movie-container #text #title-year{
-		font-size: 28px; 
+	#movie-container #text #title-year {
+		font-size: 28px;
 	}
-	#movie-container #rating{
+	#movie-container #rating {
 		padding: 0 15px 0 15px;
 	}
 }
