--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -128,7 +128,7 @@ a {
 		height: 30%;
 	}
 	#movie-container img {
-		width: 80%;
+		width: 75px;
 	}
 	#movie-container #text {
 		margin-top: 4px;
