--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -45,6 +45,21 @@ a {
 	text-decoration: none;
 	color: inherit;
 }
+
+/*#result ul li {
+	text-align: left;
+	vertical-align: middle;
+	transform: translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	transition-duration: 0.3s;
+	transition-property: transform;
+	cursor: pointer;
+	padding-bottom: 10px;
+}
+li:hover, li:focus, li:active {
+	transform: scale(1.1);
+}*/
+
 #movie-container {
 	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 	transition-duration: 0.3s;
@@ -71,7 +86,7 @@ a {
 }
 #movie-container #text {
 	flex-grow: 1;
-	margin: 10px 0 0 15px;
+	margin: 10px 0 0 10px;
 	box-sizing: border-box;
 }
 #movie-container #title-year {
@@ -131,7 +146,8 @@ a {
 		width: 85px;
 	}
 	#movie-container #text {
-		margin-top: 4px;
+		margin: 4px 0 0 4px;
+
 	}
 	#movie-container #text #title-year {
 		font-size: 28px;
