--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -55,7 +55,7 @@ form input {
 	justify-content: space-between;
 	margin: 0 auto;
 	width: 35%;
-	height: 21%;
+	height: 145px;
 	background: #e7d2cc;
 	border-radius: 5px;
 	border: 1px solid grey;
