--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -150,6 +150,7 @@ form input {
 	}
 	#movie-container #rating #rating-max {
 		font-size: 15px;
+		display: none;
 	}
 }
 /*https://www.canva.com/colors/color-palette-generator/*/
