--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_seach.css
@@ -120,7 +120,7 @@ form input {
 		height: 100px;
 	}
 	#movie-container {
-		width: 99%;
+		width: 100%;
 		height: 160px;
 		margin-top: 10px;
 	}
@@ -141,7 +141,9 @@ form input {
 	}
 	#movie-container #rating {
 		padding: 0 9px 0 9px;
-		flex-grow: 0.15;
+		flex-grow: 0.1;
+	 min-width: 13%
+
 
 	}
 	#movie-container #rating i {
