--- a/Restaurant/css/main.css
+++ b/Restaurant/css/main.css
@@ -15,6 +15,7 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  font-family: 'Piazzolla', serif;
 }
 
 /*
@@ -169,6 +170,99 @@ textarea {
   clear: both;
 }
 
+/*
+ * header
+ */
+
+/*
+<div class="header">
+    <div class="logo_container">
+      <img src="img/coffee-307147.png" alt="logo">
+      <h1><span id="mugs">Mugs</span><span id="coffee">Coffee</span></h1>
+    </div>
+    <ul class="navigation">
+      <a><li>Home</li></a>
+      <a><li>Menu</li></a>
+      <a><li>About us</li></a>
+      <a><li>Contact</li></a>
+    </ul>
+  </div>
+</div>
+<div id="landing_container">
+  <p>Hello world!.</p>
+</div>
+ */
+
+.header{
+  width: 100%;
+  height: 100px;
+  display: block;
+  background-color: lightgray;
+  color: black;
+  position: fixed;
+}
+
+.logo_container{
+  height: 100%;
+  display: table;
+  float: left;
+}
+
+.logo_container img {
+  width: 75px;
+  height: 75px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: 0 5px;
+}
+
+.logo_container h1{
+  height: 100%;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.logo_container h1 #mugs{
+  font-weight: lighter;
+}
+
+.logo_container h1 #coffee{
+  font-weight: bold;
+  padding-left: 15px;
+}
+
+.navigation {
+  float: right;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.navigation ul {
+
+}
+
+.navigation a {
+  height: 100%;
+  float: left;
+  padding: 0px 20px;
+  display: table;
+}
+
+.navigation a li{
+  height: 100%;
+  font-size: 20px;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+#container{
+  background-color: black;
+  height: 100%;
+}
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
@@ -180,9 +274,9 @@ textarea {
 }
 
 @media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
 }
 
